[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/EnemyMesh1.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Enemy1KinematicBody.gd" type="Script" id=2]
[ext_resource path="res://sounds/creature_roar_03.ogg" type="AudioStream" id=3]
[ext_resource path="res://addons/follow_bone_3d/FollowBone3D.gd" type="Script" id=4]

[sub_resource type="CapsuleShape" id=21]
radius = 0.3
height = 1.3

[sub_resource type="CapsuleShape" id=23]
radius = 0.35
height = 1.35

[sub_resource type="CubeMesh" id=24]
size = Vector3( 10, 10, 10 )

[sub_resource type="CubeMesh" id=25]
size = Vector3( 10, 10, 10 )

[node name="Enemy1KinematicBody" type="KinematicBody" groups=["enemies"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.438, 1, 0 )
collision_layer = 131076
collision_mask = 131079
input_ray_pickable = false
axis_lock_motion_y = true
move_lock_y = true
script = ExtResource( 2 )
enemy_attack_range = 1.25

[node name="EnemyMesh1" parent="." instance=ExtResource( 1 )]

[node name="BoneAttachment" parent="EnemyMesh1/Node2/Skeleton" index="0"]
transform = Transform( -0.995243, -0.0957259, -0.0181192, -0.0173523, -0.00883734, 0.99981, -0.0958679, 0.995368, 0.00713438, -16.3137, 0.753551, 10.2391 )

[node name="BoneAttachment2" parent="EnemyMesh1/Node2/Skeleton" index="1"]
transform = Transform( 1, 0, 0, 0, 1, -7.45058e-09, 0, 7.45058e-09, 1, -2.28882e-05, 155.061, -0.921187 )

[node name="BoneAttachment3" parent="EnemyMesh1/Node2/Skeleton" index="2"]
transform = Transform( 0.578607, 0.722656, -0.37813, 0.0584391, -0.49916, -0.864537, -0.81351, 0.47813, -0.331049, 76.5147, 137.239, 3.70686 )

[node name="BoneAttachment4" parent="EnemyMesh1/Node2/Skeleton" index="3"]
transform = Transform( 0.208093, 0.942386, -0.261929, 0.0990295, -0.286714, -0.952884, -0.973083, 0.17235, -0.152987, 85.0112, 139.779, 2.10958 )

[node name="BoneAttachment5" parent="EnemyMesh1/Node2/Skeleton" index="4"]
transform = Transform( 0.0896399, 0.975749, -0.199694, 0.108108, -0.208849, -0.971954, -0.99009, 0.0655376, -0.124207, 86.1193, 140.178, -0.9748 )

[node name="BoneAttachment6" parent="EnemyMesh1/Node2/Skeleton" index="5"]
transform = Transform( 0.0453271, 0.973432, -0.224446, 0.111082, -0.228195, -0.967258, -0.992777, 0.0189111, -0.118475, 85.2084, 140.315, -3.59245 )

[node name="BoneAttachment7" parent="EnemyMesh1/Node2/Skeleton" index="6"]
transform = Transform( -0.0128688, 0.936814, -0.349592, 0.114647, -0.345933, -0.931228, -0.993323, -0.0520635, -0.102951, 83.5657, 140.528, -5.99331 )

[node name="BoneAttachment8" parent="EnemyMesh1/Node2/Skeleton" index="7"]
transform = Transform( 0.574626, -0.757332, 0.310249, -0.0537491, -0.413187, -0.909059, 0.81665, 0.505693, -0.278134, -76.6081, 137.217, 3.74 )

[node name="BoneAttachment9" parent="EnemyMesh1/Node2/Skeleton" index="8"]
transform = Transform( 0.163314, -0.960085, 0.227081, -0.09726, -0.244718, -0.964704, 0.981768, 0.135464, -0.133344, -85.1695, 139.739, 2.02513 )

[node name="BoneAttachment10" parent="EnemyMesh1/Node2/Skeleton" index="9"]
transform = Transform( 0.0996362, -0.975412, 0.196579, -0.102076, -0.20654, -0.973099, 0.989774, 0.07689, -0.120145, -86.0567, 140.21, -0.939237 )

[node name="BoneAttachment11" parent="EnemyMesh1/Node2/Skeleton" index="10"]
transform = Transform( 0.0129512, -0.981151, 0.192808, -0.107911, -0.193069, -0.975233, 0.994076, -0.00817546, -0.108378, -85.1654, 140.262, -3.65283 )

[node name="BoneAttachment12" parent="EnemyMesh1/Node2/Skeleton" index="11"]
transform = Transform( -0.0134012, -0.951166, 0.308389, -0.109522, -0.305165, -0.945981, 0.993894, -0.0464524, -0.100084, -83.5483, 140.546, -5.97934 )

[node name="BoneAttachment13" parent="EnemyMesh1/Node2/Skeleton" index="12"]
transform = Transform( -0.995309, 0.0953247, 0.016514, 0.015749, -0.00877246, 0.999837, 0.0954541, 0.995408, 0.00723004, 16.3136, 0.75387, 10.2162 )

[node name="Enemy1CollisionCapsule" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 21 )

[node name="HitArea" type="Area" parent="."]
collision_layer = 6
collision_mask = 2
input_ray_pickable = false

[node name="AreaCollisionShape" type="CollisionShape" parent="HitArea"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 23 )

[node name="EnemySounds" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 3 )
unit_db = 3.0
max_db = 5.0
max_distance = 10.0

[node name="LHFollowBone3D" type="Position3D" parent="."]
transform = Transform( -0.00208093, -0.00973327, 0.000966004, 0.000990295, -0.0011922, -0.00987917, 0.00973083, -0.00196012, 0.00121197, -0.788569, 0.522418, 0.0179126 )
script = ExtResource( 4 )
skeleton = NodePath("../EnemyMesh1/Node2/Skeleton")
selected_bone = 17

[node name="MeshInstance" type="MeshInstance" parent="LHFollowBone3D"]
mesh = SubResource( 24 )

[node name="RHFollowBone3D" type="Position3D" parent="."]
transform = Transform( -0.00163314, 0.00975284, -0.00148826, -0.0009726, -0.00166032, -0.00981313, -0.00981769, -0.00145787, 0.00121972, 0.793883, 0.523004, 0.0152603 )
script = ExtResource( 4 )
skeleton = NodePath("../EnemyMesh1/Node2/Skeleton")
selected_bone = 36

[node name="MeshInstance" type="MeshInstance" parent="RHFollowBone3D"]
mesh = SubResource( 25 )

[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]

[editable path="EnemyMesh1"]
